--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 django==5.1.0
 djangorestframework==3.16.0
-django-countries[pyuca]==7.6.1
+django-environ==0.12.0
 psycopg[binary]==3.2.6
 httpx[http2]==0.28.1
